tests/typing/bad/testfile-arith-2.c

int main() { struct S *p; 1-p; }
